# VMSIS-2023

./: README.md
pnya/: Auto.cpp  BusMenu.cpp  BusMenu.h  Cargo.h  ClassDiagram.cd  ClassDiagram2.cd  Contant.h  Dump.cpp  DumpMenu.cpp  DumpMenu.h  Exception.cpp  Exception_Vvod.cpp  Exception_Vvod.h  File.h  Lab5.vcxproj.filters  Passanger.h  TrollMenu.cpp  TrollMenu.h  laba5.vcxproj  laba5.vcxproj.filters
pnya/laba1/: Array.cpp  Array.h  CMakeLists.txt  main.cpp  menu.cpp  menu.h
pnya/laba2/: Array.cpp  Array.h  Lab2.cpp
pnya/laba3/: Auto.cpp  Auto.h  Bus.cpp  Bus.h  CMakeLists.txt  cargo.cpp  cargo.h  dump.cpp  dump.h  menu.h  passanger.cpp  passanger.h  troll.cpp  troll.h
pnya/laba4/: Auto.cpp  Auto.h  Bus.cpp  CMakeLists.txt  Cargo.cpp  ClassDiagram.cd  Contant.h  Dump.cpp  Dump.h  Lab4.sln  Passanger.cpp  Passanger.h  Stack.cpp  Stack.h  Troll.cpp  main.cpp  menu.cpp  menu.h
pnya/laba5/: Auto.cpp  Bus.cpp  BusMenu.cpp  Cargo.cpp  Cargo.h  Dump.cpp  Dump.h  DumpMenu.cpp  DumpMenu.h  Exception.h  Passanger.cpp  Troll.cpp  TrollMenu.cpp  laba5.vcxproj  laba5.vcxproj.filters  main.cpp  menu.h
pnya/laba7/: Algorithms.h  Auto.cpp  Auto.h  Bus.cpp  Bus.h  BusFile.h  BusMenu.cpp  BusMenu.h  Cargo.h  ClassDiagram2.cd  ClassDiagram23.cd  Contant.h  Dump.cpp  Dump.h  DumpFile.h  DumpMenu.cpp  DumpMenu.h  Exception_File.cpp  Exception_File.h  File.h  Lab5.vcxproj  Passanger.cpp  Troll.cpp  Troll.h  Troll.txt  TrollFile.h  TrollMenu.cpp  TrollMenu.h  laba5.vcxproj  laba5.vcxproj.filters
pnya/laba8/: Algorithms.h  Auto.h  Bus.cpp  Bus.h  BusMenu.cpp  BusMenu.h  File.h  (+21 more)
(+17 files in other folders)
